# santos-embarcados

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  idf_component.yml  main.c
projeto1/: CMakeLists.txt  sdkconfig
projeto1/main/: CMakeLists.txt  hello_world_main.c  projeto1.c
